[gd_scene load_steps=19 format=3 uid="uid://cbmelwurtnfwl"]

[ext_resource type="Texture2D" uid="uid://dlwkfp54ubphk" path="res://Sprites/Items/JumpingMushroom/Jumping_Mushroom_0.png" id="1_tdbmp"]
[ext_resource type="Script" path="res://Scene/Items/JumpingMushroom/jumping_mushroom.gd" id="1_y8y6j"]
[ext_resource type="Texture2D" uid="uid://csvr3ehha3ohd" path="res://Sprites/Items/JumpingMushroom/Jumping_Mushroom_dust.png" id="2_a3r8j"]
[ext_resource type="Texture2D" uid="uid://cw1ubqnkiyemp" path="res://Sprites/Shadow.png" id="2_lba4r"]
[ext_resource type="Texture2D" uid="uid://qm7lx86x6glg" path="res://Sprites/Items/JumpingMushroom/Jumping_Mushroom_1.png" id="2_ptl7i"]
[ext_resource type="Texture2D" uid="uid://c2d7mutdn118s" path="res://Sprites/Items/JumpingMushroom/Jumping_Mushroom_2.png" id="3_g75mr"]
[ext_resource type="Script" path="res://addons/random_timer/random_timer.gd" id="7_m0ddu"]

[sub_resource type="Gradient" id="Gradient_iea7s"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_41tpb"]
gradient = SubResource("Gradient_iea7s")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_ie8lp"]
particle_flag_disable_z = true
gravity = Vector3(12, 120, 0)
color_ramp = SubResource("GradientTexture1D_41tpb")

[sub_resource type="SpriteFrames" id="SpriteFrames_fh3do"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_tdbmp")
}, {
"duration": 1.0,
"texture": ExtResource("2_ptl7i")
}, {
"duration": 1.0,
"texture": ExtResource("3_g75mr")
}],
"loop": false,
"name": &"jumping",
"speed": 12.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_uu45i"]
radius = 14.0
height = 76.0

[sub_resource type="Animation" id="Animation_3gjnb"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CollisionShape2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -13)]
}

[sub_resource type="Animation" id="Animation_h6fxv"]
resource_name = "animation_mushroom_jump"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CollisionShape2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 15), Vector2(0, -13)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5jwrb"]
_data = {
"RESET": SubResource("Animation_3gjnb"),
"animation_mushroom_jump": SubResource("Animation_h6fxv")
}

[sub_resource type="Animation" id="Animation_vqd52"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MushroomDust:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -14)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MushroomDust:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MushroomDust:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_8ko60"]
resource_name = "animation_dust"
length = 6.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MushroomDust:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 3, 6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MushroomDust:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, -14), Vector2(0, -28)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MushroomDust:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, -0.174533]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_cu60a"]
_data = {
"RESET": SubResource("Animation_vqd52"),
"animation_dust": SubResource("Animation_8ko60")
}

[node name="Jumping_Mushroom" type="Area2D"]
collision_layer = 8
collision_mask = 2
script = ExtResource("1_y8y6j")
jumping = -2025

[node name="Shadow" type="Sprite2D" parent="."]
position = Vector2(1.78814e-06, 34)
scale = Vector2(0.15, 0.15)
texture = ExtResource("2_lba4r")

[node name="DustParticlesMushroom_L" type="GPUParticles2D" parent="."]
position = Vector2(-38, 10)
emitting = false
amount = 1
process_material = SubResource("ParticleProcessMaterial_ie8lp")
texture = ExtResource("2_a3r8j")
lifetime = 0.5
one_shot = true

[node name="DustParticlesMushroom_R" type="GPUParticles2D" parent="."]
position = Vector2(38, 10)
emitting = false
amount = 1
process_material = SubResource("ParticleProcessMaterial_ie8lp")
texture = ExtResource("2_a3r8j")
lifetime = 0.5
one_shot = true

[node name="SpriteJumpingMushroom" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
sprite_frames = SubResource("SpriteFrames_fh3do")
animation = &"jumping"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -13)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_uu45i")
debug_color = Color(0.784314, 0.431373, 0.133333, 0.419608)

[node name="Timer_recovery" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Animation_mushroom" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_5jwrb")
}

[node name="MushroomDust" type="Node2D" parent="."]
modulate = Color(1, 1, 1, 0)
position = Vector2(0, -14)

[node name="JumpingMushroomDust" type="Sprite2D" parent="MushroomDust"]
scale = Vector2(3, 3)
texture = ExtResource("2_a3r8j")

[node name="JumpingMushroomDust2" type="Sprite2D" parent="MushroomDust"]
scale = Vector2(3, 3)
texture = ExtResource("2_a3r8j")

[node name="Animation_Dust" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_cu60a")
}

[node name="RandomTimer_dust" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
script = ExtResource("7_m0ddu")
min_time = 10.0
max_time = 15.0

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="Timer_recovery" to="." method="_on_timer_recovery_timeout"]
[connection signal="timeout" from="RandomTimer_dust" to="." method="_on_random_timer_dust_timeout"]
